[project]
name = "medtime-cli"
version = "1.0.0"
description = "Gerenciador CLI de medicamentos para idosos e cuidadores"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "supabase>=2.4.0",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]